<resources>
    <!--公共-->
    <string name="money_unit">￥</string>
    <string name="money_star">*</string>

    <!--提示hint-->
    <string name="item_drugMessage_hint_spec">请填写药品规格</string>
    <string name="item_drugMessage_hint_package">请填写药品包装数量</string>
    <string name="item_drugMessage_hint_factory">请填写生产厂家</string>
    \
    <!--模块-->
    <string name="app_name">POS商城</string>
    <string name="dialog_process">加载中…</string>
    <string name="titleBar_finish">完成</string>
    <string name="titleBar_login">登陆</string>
    <string name="noNetwork_load_fail">加载失败，点击重新加载</string>
    <string name="noData_no_data">亲，没有数据哟～</string>
    <string name="again_exit_text">再按一次退出</string>
    <string name="guide_start">立即体验</string>
    <string name="scavengers_text">扫码购药</string>
    <string name="details_activity_time">活动倒计时</string>
    <string name="details_money_sign">￥</string>
    <string name="details_freight">运费：￥</string>
    <string name="details_activity_name">活动</string>
    <string name="details_prent">满赠</string>
    <string name="details_condition">条件</string>
    <string name="details_instructions">说明</string>
    <string name="details_num">数量</string>
    <string name="confirmPurchase_address">收货地址：</string>
    <string name="confirmPurchase_stayMessage">留      言：</string>
    <string name="confirmPurchase_editMsg">请输入留言信息</string>
    <string name="confirmPurchase_payWay">支付方式</string>
    <string name="confirmPurchase_freight">运费</string>
    <string name="confirmPurchase_unit">元</string>
    <string name="confirmPurchase_freight_et">请输入运费</string>
    <string name="confirmPurchase_orderPrice">订单价格</string>
    <string name="confirmPurchase_orderMoney">需付金额：</string>
    <string name="confirmPurchase">确认采购</string>
    <string name="confirmPurchase_state_cancel">已取消</string>
    <string name="confirmPurchase_state_reject">已驳回</string>
    <string name="item_confirmPurchase_spec">规格：</string>
    <string name="item_confirmPurchase_package">包装：</string>
    <string name="item_confirmPurchase_factory">厂家：</string>
    <string name="item_confirmPurchase_date">效期：</string>
    <string name="item_confirmPurchase_gift">赠品</string>
    <string name="item_scavengers_spec">规格：</string>
    <string name="item_scavengers_package">包装：</string>
    <string name="item_scavengers_factory">厂家：</string>
    <string name="item_scavengers_date">效期：</string>
    <string name="item_scavengers_gift">赠品</string>
    <string name="item_scavengers_discount">折扣</string>
    <string name="item_scavengers_fullGift">满赠</string>
    <string name="item_scavengers_cond">条件</string>
    <string name="aty_scavengers_sweep">扫一扫</string>
    <string name="aty_scavengers_pc">电脑版商城商品二维码采购</string>
    <string name="aty_scavengers_purchase">立即采购</string>
    <string name="aty_home_discount">折扣优惠</string>
    <string name="aty_home_gift">满赠优惠</string>
    <string name="more">更多</string>
    <string name="item_home_gift">赠品</string>
    <string name="item_home_giftNum">数量</string>
    <string name="item_drugMessage_drugName">药品名称</string>
    <string name="item_drugMessage_drugDetails">药品详情</string>
    <string name="item_drugMessage_drugSpec">规格</string>
    <string name="item_drugMessage_drugPackage">包装</string>
    <string name="item_drugMessage_drugFactory">厂家</string>
    <string name="item_drugMessage_drugNum">预购数量</string>
    <string name="window_refund">确认退款吗？</string>
    <string name="window_getGoods">确认收货吗？</string>
    <string name="window_cancel">取消</string>
    <string name="window_confirm">确定</string>
    <string name="order_success">下单成功，货到付款</string>
    <string name="receiveGoodsMsg_people">收货人</string>
    <string name="receiveGoodsMsg_phone">联系电话</string>
    <string name="receiveGoodsMsg_area">所在地区</string>
    <string name="receiveGoodsMsg_address">详细地址</string>
    <string name="refundNotice_money">退款金额</string>
    <string name="refundNotice_success">退款发起成功，请耐心等待银行退款处理</string>
    <string name="refundNotice_way">退款方式：</string>
    <string name="refundNotice_pay">支付方式原路退还</string>
    <string name="refundNotice_time">到账时间：</string>
    <string name="refundNotice_bank">实际到账时间，以银行到账时间为准，   </string>
    <string name="refundNotice_24">预计24小时内到账</string>
    <string name="tab_order_all">全部</string>
    <string name="tab_order_pay">待支付</string>
    <string name="tab_order_send">待发货</string>
    <string name="tab_order_receive">待收货</string>
    <string name="item_order">去支付</string>
    <string name="window_fullGift_title">赠品信息</string>
    <string name="home_noData_txt">活动正在上架中，敬请期待...</string>

</resources>
