<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/view_titlebar" />

    <TextView
        android:id="@+id/aty_refundNotice_moneyName_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size82"
        android:gravity="center_horizontal"
        android:text="@string/refundNotice_money"
        android:textColor="@color/color_333"
        android:textSize="@dimen/txt15" />

    <RelativeLayout
        android:id="@+id/aty_refundNotice_money_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size20"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/aty_refundNotice_moneyUnit_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/aty_refundNotice_moneyNum_tv"
            android:text="@string/money_unit"
            android:textColor="@color/color_151515"
            android:textSize="@dimen/txt28" />

        <TextView
            android:id="@+id/aty_refundNotice_moneyNum_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/aty_refundNotice_moneyUnit_tv"
            android:text="2000.00"
            android:textColor="@color/color_151515"
            android:textSize="@dimen/txt40" />
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size12"
        android:gravity="center_horizontal"
        android:text="@string/refundNotice_success"
        android:textColor="@color/color_999"
        android:textSize="@dimen/txt15" />

    <RelativeLayout
        android:id="@+id/aty_refundNotice_way_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size30"

        android:layout_marginTop="@dimen/size60">

        <TextView
            android:id="@+id/aty_refundNotice_wayName_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refundNotice_way"
            android:textColor="@color/color_3F3F3F"
            android:textSize="@dimen/txt14" />

        <TextView
            android:id="@+id/aty_refundNotice_wayContent_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/aty_refundNotice_wayName_tv"
            android:text="@string/refundNotice_pay"
            android:textColor="@color/color_999"
            android:textSize="@dimen/txt14" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/aty_refundNotice_date_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/size30"
        android:layout_marginRight="@dimen/size30"
        android:layout_marginTop="@dimen/size22">

        <TextView
            android:id="@+id/aty_refundNotice_dateName_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/refundNotice_time"
            android:textColor="@color/color_3F3F3F"
            android:textSize="@dimen/txt14" />

        <TextView
            android:id="@+id/aty_refundNotice_dateContent_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/aty_refundNotice_dateName_tv"
            android:text="@string/refundNotice_bank"
            android:textColor="@color/color_999"
            android:textSize="@dimen/txt14" />

        <TextView
            android:id="@+id/aty_refundNotice_dateContent02_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/aty_refundNotice_dateContent_tv"
            android:layout_below="@+id/aty_refundNotice_dateContent_tv"
            android:text="@string/refundNotice_24"
            android:layout_marginTop="@dimen/size10"
            android:textColor="@color/color_999"
            android:textSize="@dimen/txt14" />
    </RelativeLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/size80"
        android:src="@drawable/button" />
</LinearLayout>
