<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_banTransparent"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/window_refund_rl"
        android:layout_width="@dimen/size540"
        android:layout_height="@dimen/size288"
        android:background="@drawable/white_ppw_replace"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/window_refund"
            android:textColor="@color/color_1A1A1A"
            android:textSize="@dimen/txt17" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/size1"
            android:background="@color/color_E5E5E5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/window_refund_cancel_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/window_cancel"
                android:textColor="@color/color_1A1A1A"
                android:textSize="@dimen/txt17" />

            <TextView
                android:layout_width="@dimen/size1"
                android:layout_height="match_parent"
                android:background="@color/color_E5E5E5" />

            <TextView
                android:id="@+id/window_refund_true_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/window_confirm"
                android:textColor="@color/color_EB3E2D"
                android:textSize="@dimen/txt17" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
